# openclaw-workspace

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.openclaw/workspace/: AGENTS.md  BOOTSTRAP.md  DREAMS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  bashrc-copy-edit-this  config_get.json  obsidian-vault  yt-research-stock-picking-hedge-fund-strategy-2026-04-11.md
.openclaw/workspace/10_Tasks/: 10_Tasks.md
.openclaw/workspace/Vault/: CLAUDE.md  (+4 more)
.openclaw/workspace/projects/Axe-Capital/step0-shared/: pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step0-shared/axe_core/: __init__.py  llm.py  paths.py  schemas.py  trace.py
.openclaw/workspace/projects/Axe-Capital/step0-shared/axe_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
.openclaw/workspace/projects/Axe-Capital/step0-shared/tests/: test_paths.py  test_schemas.py  test_trace.py
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/: README.md  pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/axe_coo/: __init__.py  cli.py  models.py  step2_analysis.py  step2_cli.py  step3_cli.py  step3_decision.py
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/axe_coo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/axe_coo/connectors/: fred.py  newsapi.py  options_flow.py  reddit.py  sec_edgar.py  yfinance_conn.py
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/axe_coo/normalize/: freshness.py
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/axe_coo/util/: __init__.py  env.py  numbers.py
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/axe_coo/vendors/: __init__.py  uw.py
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/smoke-tests/: aapl-bundle-2026-04-12.json  aapl-bundle-clean-2026-04-12.json
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/smoke-tests/step2-aapl-run/: aapl-fundamental-memo.json  aapl-macro-memo.json  aapl-sentiment-memo.json  aapl-step2-analysis.json  aapl-technical-memo.json
.openclaw/workspace/projects/Axe-Capital/step1-data-foundation/smoke-tests/step3-aapl-run/: aapl-bear-case.json  aapl-bull-case.json  aapl-ceo-decision.json  aapl-cio-proposal.json  aapl-cro-review.json  aapl-debate-summary.json  aapl-decision-memo.md  aapl-step3-decision.json
.openclaw/workspace/projects/Axe-Capital/step10-macro/: pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step10-macro/axe_macro/: __init__.py  agent.py  cli.py
.openclaw/workspace/projects/Axe-Capital/step10-macro/tests/: test_agent.py
.openclaw/workspace/projects/Axe-Capital/step2-news/: pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step2-news/axe_news/: __init__.py  cli.py  feeds.py  ingest.py  pipeline.py  scorer.py  watchlist.py
.openclaw/workspace/projects/Axe-Capital/step2-news/tests/: test_cli.py  test_ingest.py  test_pipeline.py  test_scorer.py
.openclaw/workspace/projects/Axe-Capital/step2-news/tests/fixtures/: sample-reuters.xml
.openclaw/workspace/projects/Axe-Capital/step3-debate-decision/: pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step3-debate-decision/axe_decision/: __init__.py  cli.py  openai_chat.py
.openclaw/workspace/projects/Axe-Capital/step3-debate-decision/axe_decision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.openclaw/workspace/projects/Axe-Capital/step3-debate-decision/tests/: test_analyst_reports.py
.openclaw/workspace/projects/Axe-Capital/step4-alpha-hunter/: README.md  pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step4-alpha-hunter/axe_alpha/: __init__.py  alpha_scan.py  cli.py  util.py
.openclaw/workspace/projects/Axe-Capital/step4-alpha-hunter/axe_alpha_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.openclaw/workspace/projects/Axe-Capital/step4-alpha-hunter/reports/: 2026-04-12.json  2026-04-16.json
.openclaw/workspace/projects/Axe-Capital/step4-alpha-hunter/tests/: test_cli_trace.py
.openclaw/workspace/projects/Axe-Capital/step5-portfolio-tracking/: README.md  pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step5-portfolio-tracking/axe_portfolio/: __init__.py  cli.py  flex.py  ibkr.py  tracker.py  util.py
.openclaw/workspace/projects/Axe-Capital/step5-portfolio-tracking/axe_portfolio_tracking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.openclaw/workspace/projects/Axe-Capital/step5-portfolio-tracking/reports/: weekly-review-latest.json
.openclaw/workspace/projects/Axe-Capital/step5-portfolio-tracking/tests/: test_cli_trace.py  test_flex.py  test_flex_fallback.py  test_ibkr.py  test_tracker.py
.openclaw/workspace/projects/Axe-Capital/step7-automation/: README.md  check_artifacts.sh  pyproject.toml  run_daily_refresh.sh  start_prototype.sh
.openclaw/workspace/projects/Axe-Capital/step7-automation/axe_orchestrator/: __init__.py  api.py  cli.py  committee_orchestrator.py  health.py  projector.py  runners.py
.openclaw/workspace/projects/Axe-Capital/step7-automation/tests/: test_api.py  test_cli.py  test_command_center_projector.py  test_health.py  test_mission_index.py  test_orchestrator.py
.openclaw/workspace/projects/Axe-Capital/step8-fundamental/: pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step8-fundamental/axe_fundamental/: __init__.py  agent.py  cli.py  reports.py
.openclaw/workspace/projects/Axe-Capital/step8-fundamental/axe_fundamental.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.openclaw/workspace/projects/Axe-Capital/step8-fundamental/tests/: test_reports.py
.openclaw/workspace/projects/Axe-Capital/step9-technical/: pyproject.toml
.openclaw/workspace/projects/Axe-Capital/step9-technical/axe_technical/: __init__.py  agent.py  cli.py
.openclaw/workspace/projects/Axe-Capital/step9-technical/tests/: test_agent.py
scripts/: ble-colors.sh  oc-health-official.sh  ult-health-check.sh
(+437 files in other folders)
