[project]
name = "axe-core"
version = "0.1.0"
description = "Axe Capital shared utilities: trace, paths, schemas"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["axe_core*"]
