[project]
name = "axe-news"
version = "0.1.0"
description = "Axe Capital Step 2: RSS ingestion + LLM impact scorer"
requires-python = ">=3.11"
dependencies = [
  "axe-core",
  "httpx>=0.27",
  "feedparser>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
axe-news = "axe_news.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["axe_news*"]

[tool.uv.sources]
axe-core = { path = "../step0-shared", editable = true }
