[project]
name = "axe-alpha-hunter"
version = "0.1.0"
description = "Axe Capital Step 4: Alpha Hunter proactive scan"
requires-python = ">=3.11"
dependencies = [
  "axe-core",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "yfinance>=0.2.50",
  "ddgs>=9.5.0",
  "pandas>=2.2",
  "playwright>=1.52.0",
]

[tool.uv.sources]
axe-core = { path = "../step0-shared", editable = true }

[project.scripts]
axe-alpha-scan = "axe_alpha.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["axe_alpha*"]
