[project]
name = "axe-portfolio"
version = "0.1.0"
description = "Axe Capital Step 5: portfolio tracking"
requires-python = ">=3.11"
dependencies = [
  "axe-core",
  "ib_async>=2.1",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "yfinance>=0.2.50",
]

[project.scripts]
axe-portfolio-review = "axe_portfolio.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["axe_portfolio*"]

[tool.uv.sources]
axe-core = { path = "../step0-shared", editable = true }
